fix navbar width causing horizontal scroll

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,7 +6,7 @@ header {
 
     background-color: #05678e;
     color: white;
-    width: 100vw;
+    width: 100%;
 }
 
 .menuToggle {
